Finalización de la sección articulos y detalles de conceptos

--- a/Code/lobby-styles.css
+++ b/Code/lobby-styles.css
@@ -434,7 +434,7 @@ h4 {
   color: var(--Blanco);
   font-size: 80px;
   font-weight: 500;
-  padding-bottom: 8%;
+  padding-bottom: 4%;
   margin-left: 4%;
   text-shadow: 2px 2px 1.2px rgba(0, 0, 0, 0.253);
 }
@@ -442,16 +442,23 @@ h4 {
 .lobby-content .lobby-grid {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (400px)[3];
-      grid-template-columns: repeat(3, 400px);
+  -ms-grid-columns: (450px)[3];
+      grid-template-columns: repeat(3, 450px);
   -ms-grid-rows: auto;
       grid-template-rows: auto;
-  gap: 3%;
-  width: 80%;
+  gap: 6% 0;
+  width: 85%;
   margin: auto;
   justify-items: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: distribute;
+      align-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 10%;
 }
 
 @media screen and (max-width: 800px) {
@@ -478,7 +485,7 @@ h4 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  max-width: 360px;
+  max-width: 90%;
   height: 100%;
   border-radius: 30px;
   -webkit-box-align: center;
@@ -534,8 +541,240 @@ h4 {
   padding: 5% 0;
 }
 
-.lobby-content .lobby-grid .grid-card .content-space p::first-letter {
-  text-transform: uppercase;
+/*=============  ORGANIZACIÓN DEL CONTENIDO CONCEPTOS ============*/
+i {
+  color: var(--Gris-01);
+}
+
+.grid-area {
+  padding-top: 10%;
+  background: none;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 20% 80%;
+      grid-template-columns: 20% 80%;
+      grid-template-areas: "indice contenido";
+  gap: 2%;
+}
+
+.grid-area .index {
+  padding-top: 0;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: indice;
+  width: auto;
+  margin: auto;
+}
+
+.grid-area .index-content {
+  padding-top: 10%;
+}
+
+.grid-area .Cocontent {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: contenido;
+}
+
+.grid-area .Cocontent div {
+  width: 95%;
+  margin-left: 5%;
+  margin-bottom: 3%;
+  border-bottom: 1px solid #888888;
+  padding-bottom: 2%;
+}
+
+.grid-area .Cocontent div i {
+  color: var(--Gris-01);
+  display: block;
+  text-align: right;
+}
+
+.grid-area .Cocontent div p {
+  font-weight: 200;
+}
+
+#but-clas, #but-clas-S {
+  width: 100%;
+  border: none;
+  padding: 15px;
+  margin-bottom: 2%;
+  background: var(--rojo-01);
+  margin: 5% 0;
+}
+
+#but-clas p, #but-clas-S p {
+  margin-left: 3%;
+  font-weight: 600;
+  font-size: 50px;
+}
+
+#but-clas {
+  margin-top: 0;
+}
+
+#but-clas-S {
+  background-color: var(--verde-01);
+}
+
+.CLobby h4 {
+  font-size: 40px;
+}
+
+.CLobby h5 {
+  font-size: 26px;
+}
+
+.CLobby p, .CLobby b, .CLobby i, .CLobby a {
+  font-size: 22px;
+}
+
+.CLobby h4 {
+  color: #c77343;
+}
+
+.CLobby h5 {
+  color: #c77343;
+}
+
+.CLobby p, .CLobby h2 {
+  width: 75%;
+  color: #fff;
+}
+
+.CLobby p b, .CLobby h2 b {
+  color: var(--Azul-02);
+}
+
+.CLobby a {
+  color: var(--rojo-01);
+  font-weight: 600;
+}
+
+.CLobby h2 {
+  font-weight: 600;
+}
+
+.CLobby h3 {
+  color: #fff;
+  font-weight: 600;
+  font-size: 65px;
+}
+
+.masInfo {
+  font-size: 35px;
+  font-style: italic;
+}
+
+.blog-link {
+  width: 80%;
+  margin: auto;
+}
+
+.masInfo-space {
+  padding-bottom: 10%;
+}
+
+.masInfo-space ul {
+  margin-bottom: 5%;
+}
+
+/*==========  NIGHT MODIFICATION ==========*/
+.night {
+  background: var(--cafe-02);
+}
+
+.night h4 {
+  color: var(--Amarillo-01);
+}
+
+.night h5 {
+  color: #9e9e9e;
+}
+
+.night p {
+  color: #9e9e9e;
+}
+
+.night p b {
+  color: var(--Azul-02);
+}
+
+.night .blank_p {
+  color: #fff;
+}
+
+.night h3 {
+  color: var(--Amarillo-01);
+}
+
+.night i {
+  color: var(--Azul-01);
+}
+
+/*=============== ARTICULOS =================*/
+.articles-box {
+  width: 70%;
+  margin: auto;
+}
+
+.articles-box .article {
+  padding-bottom: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-items: baseline;
+}
+
+.articles-box .article .icon-article {
+  min-width: 40px;
+  margin: 1%;
+}
+
+.articles-box .article .icon-article img {
+  width: 100%;
+}
+
+.articles-box .text-article {
+  color: #fff;
+}
+
+.articles-box .text-article h3 {
+  font-size: 35px;
+  margin-bottom: 1%;
+}
+
+.articles-box .text-article p {
+  font-weight: 200;
+  font-size: 23px;
+  margin-bottom: 3%;
+}
+
+.articles-box .text-article a {
+  font-size: 26px;
+}
+
+.articles-box .text-article div {
+  height: 350px;
+  margin: 2% 0;
+}
+
+.articles-box .text-article div img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.articles-box .text-article iframe {
+  margin: auto;
+  padding-bottom: 10%;
+}
+
+.ALobby h2 {
+  font-size: 68px;
+  font-weight: 700;
 }
 
 /*======================== BG =======================*/
@@ -1539,174 +1778,5 @@ article h2 {
   }
 }
 
-/*=============  ORGANIZACIÓN DEL CONTENIDO CONCEPTOS ============*/
-i {
-  color: var(--Gris-01);
-}
-
-.grid-area {
-  padding-top: 10%;
-  background: none;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 20% 80%;
-      grid-template-columns: 20% 80%;
-      grid-template-areas: "indice contenido";
-  gap: 2%;
-}
-
-.grid-area .index {
-  padding-top: 0;
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: indice;
-  width: auto;
-  margin: auto;
-}
-
-.grid-area .index-content {
-  padding-top: 10%;
-}
-
-.grid-area .Cocontent {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: contenido;
-}
-
-.grid-area .Cocontent div {
-  width: 95%;
-  margin-left: 5%;
-  margin-bottom: 3%;
-  border-bottom: 1px solid #888888;
-  padding-bottom: 2%;
-}
-
-.grid-area .Cocontent div i {
-  color: var(--Gris-01);
-  display: block;
-  text-align: right;
-}
-
-.grid-area .Cocontent div p {
-  font-weight: 200;
-}
-
-#but-clas, #but-clas-S {
-  width: 100%;
-  border: none;
-  padding: 15px;
-  margin-bottom: 2%;
-  background: var(--rojo-01);
-  margin: 5% 0;
-}
-
-#but-clas p, #but-clas-S p {
-  margin-left: 3%;
-  font-weight: 600;
-  font-size: 50px;
-}
-
-#but-clas {
-  margin-top: 0;
-}
-
-#but-clas-S {
-  background-color: var(--verde-01);
-}
-
-.CLobby h4 {
-  font-size: 40px;
-}
-
-.CLobby h5 {
-  font-size: 26px;
-}
-
-.CLobby p, .CLobby b, .CLobby i, .CLobby a {
-  font-size: 22px;
-}
-
-.CLobby h4 {
-  color: #c77343;
-}
-
-.CLobby h5 {
-  color: #c77343;
-}
-
-.CLobby p, .CLobby h2 {
-  width: 75%;
-  color: #fff;
-}
-
-.CLobby p b, .CLobby h2 b {
-  color: var(--Azul-02);
-}
-
-.CLobby a {
-  color: var(--rojo-01);
-  font-weight: 600;
-}
-
-.CLobby h2 {
-  font-weight: 600;
-}
-
-.CLobby h3 {
-  color: #fff;
-  font-weight: 600;
-  font-size: 65px;
-}
-
-.masInfo {
-  font-size: 35px;
-  font-style: italic;
-}
-
-.blog-link {
-  width: 80%;
-  margin: auto;
-}
-
-.masInfo-space {
-  padding-bottom: 10%;
-}
-
-.masInfo-space ul {
-  margin-bottom: 5%;
-}
-
-/*==========  NIGHT MODIFICATION ==========*/
-.night {
-  background: var(--cafe-02);
-}
-
-.night h4 {
-  color: var(--Amarillo-01);
-}
-
-.night h5 {
-  color: #9e9e9e;
-}
-
-.night p {
-  color: #9e9e9e;
-}
-
-.night p b {
-  color: var(--Azul-02);
-}
-
-.night .blank_p {
-  color: #fff;
-}
-
-.night h3 {
-  color: var(--Amarillo-01);
-}
-
-.night i {
-  color: var(--Azul-01);
-}
+/**/
 /*# sourceMappingURL=lobby-styles.css.map */
