--- a/Code/lobby-styles.scss
+++ b/Code/lobby-styles.scss
@@ -83,168 +83,4 @@
       opacity: 1;
     }
   }
-  /*=============  ORGANIZACIÓN DEL CONTENIDO CONCEPTOS ============*/
-
-  i{
-    color: var(--Gris-01);
-  }
-
-.grid-area{
-
-    padding-top: 10%;
-    background: none;
-    display: grid;
-    grid-template-columns: 20% 80%;
-    grid-template-areas: "indice contenido";
-    gap: 2%;
-
-    
-      .index{
-        padding-top: 0;
-        grid-area: indice;
-        width: auto;
-        margin: auto;
-      }
-      .index-content{
-        padding-top: 10%;
-      }
-      
-      .Cocontent{
-        grid-area: contenido;
-  
-        div{
-          width: 95%;
-          margin-left: 5%;
-          margin-bottom: 3%;
-          border-bottom: 1px solid rgb(136, 136, 136);
-          padding-bottom: 2%;
-         
-          i{
-            color: var(--Gris-01);
-            display: block;
-            text-align: right;
-          }
-         
-
-          p{
-            font-weight: 200;
-          }
-        }
-      }
-
-  }
-
-  #but-clas, #but-clas-S{
-    width: 100%;
-    border: none;
-    padding: 15px;
-    margin-bottom: 2%;
-    background:  var(--rojo-01);
-    margin: 5% 0;   
-
-    p{
-      margin-left: 3%;
-      font-weight: 600;
-      font-size: 50px;
-    }
-
-  }
-  #but-clas{
-    margin-top: 0;
-  }
-  #but-clas-S{
-    background-color: var(--verde-01);
-  }
-  
-
-
-.CLobby{
-
-  h4{
-      font-size: 40px;
-      
-  }
-  h5{
-      font-size: 26px;
-  }
-  p,b,i,a{
-      font-size: 22px;
-  }
-  h4{
-      color: rgb(199, 115, 67);
-  }
-
-  h5{
-      color: rgb(199, 115, 67);
-  }
-
-  p,h2{
-    width: 75%;
-      color: #fff;
-      b{
-          color: var(--Azul-02);
-      }
-  }
-  a{
-      color: var(--rojo-01);
-      font-weight: 600;
-  }
-  h2{
-      font-weight: 600;
-  }
-
-  h3{
-    color: #fff;
-    font-weight: 600;
-    font-size: 65px;
-  }
-
-}
-
-.masInfo{
-  
-  font-size: 35px;
-  font-style: italic;
-}
-.blog-link{
-  width: 80%;
-  margin: auto;
-}
-
-.masInfo-space{
-  padding-bottom: 10%;
-  ul{
-      margin-bottom: 5%; 
-  }
-}
-
-/*==========  NIGHT MODIFICATION ==========*/
-
-.night{
-  background: var(--cafe-02);
-  h4{
-      color: var(--Amarillo-01);
-  }
-  
-  h5{
-      color: rgb(158, 158, 158);
-  }
-
-  p{
-      color: rgb(158, 158, 158);
-      b{
-          color: var(--Azul-02);
-      }
-  }
-  
-  .blank_p{
-    color: #fff;
-  }
-
-  h3{
-    color: var(--Amarillo-01);
-  }
-  i{
-    color: var(--Azul-01);
-  }
-}
+/**/
