Se linkearon las redes sociales, se agregó una rueda para subir más rapidamente y se terminó el lobby de contacto

--- a/Code/bars.css
+++ b/Code/bars.css
@@ -11,6 +11,10 @@
   scroll-behavior: smooth;
 }
 
+*::first-letter {
+  text-transform: uppercase;
+}
+
 :root {
   --Negro: #000;
   --Blanco: #fff;
@@ -23,6 +27,8 @@
   --verde-01: #00A14A;
   --rojo-01: #C02116;
   --rojo-02: #c01649;
+  --cafe-01: #3d280c;
+  --cafe-02: #140d04;
   --Glass: rgba(255, 255, 255, 0.3);
 }
 
@@ -47,6 +53,7 @@ button {
   overflow: auto;
 }
 
+/**/
 body {
   width: 100vw;
   height: 100vh;
