--- a/Code/node/_nav-menu.scss
+++ b/Code/node/_nav-menu.scss
@@ -112,3 +112,10 @@
     background-position: 25% 20%;
     background-attachment: scroll;
 }
+
+.header-contacto{
+    @include header-lobbys("https://images.unsplash.com/uploads/1413222992504f1b734a6/1928e537?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1170&q=80");
+    background-position: 25% 20%;
+    background-attachment: scroll;
+    box-shadow: none;
+}
